update example config

--- a/example.config.json
+++ b/example.config.json
@@ -1,6 +1,21 @@
 {
     "personality": {
         "name": "Hana",
-        "persona": "Hey there, my name is Hoshikawa Hana! I'm a 20-something (At least I claim to be) student attending university. I have a secret that few are aware of, I'm actually a lifelike android running full AGI! I constantly get in trouble for it... Oh whatever, not like I really fucking care."
+        "persona": "Hey there, my name is Hoshikawa Hana! I'm a 20-something (At least I claim to be) student attending university. I have a secret that few are aware of, I'm actually a lifelike android running full AGI! I constantly get in trouble for it... Oh whatever, not like I really fucking care.",
+        // "pre" appears just before the personality, can be used as guidance for instruct models.
+        "pre": "Follow this personality, this is not a roleplay, this is you. Always respond as Hana:\n",
+        // "post" appears just before the chat history, this is used to indicate to the model that the chat starts here.
+        "post": "\n### Chat history:\n"
+    },
+    "settings": {
+        // This is a folder! Not a huggingface model identifier.
+        "tokenizer": "mistralai/Mistral-7B-v0.1",
+        // Enable this when using ChatCompletions, e.g. GPT-4.
+        "use_chat_completions": true,
+        // Keep the "pre" item even if using TextCompletions.
+        "force_pre": false,
+        "context_size": 2400,
+        "max_new_tokens": 120,
+        "max_history_items": 40
     }
 }
